test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/compare_pointer_to_zero.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(x)
  =
  const int(0)
  ;
  return
  identifier(x)
  >
  const int(0)
  ;
  }
